# src/app/Http/Controllers/OrganisationController.php
@@ -1,0 +1,183 @@
+<?php
+
+namespace App\Http\Controllers;
+
+use Illuminate\Http\Request;
+use App\Http\Controllers\Controller;
+use Illuminate\Support\Facades\Validator;
+use Illuminate\Support\Facades\Hash;
+use Illuminate\Support\Facades\Auth;
+use App\User;
+use App\Organisation;
+
+class OrganisationController extends Controller
+{
+        /**
+     * @SWG\Get(
+     *   path="/api/organisations",
+     *   summary="Return all organisations",
+     *   operationId="index",
+     *   @SWG\Response(response=200, description="successful operation"),
+     *   @SWG\Response(response=406, description="not acceptable"),
+     *   @SWG\Response(response=500, description="internal server error")
+     * )
+     *
+     */
+    public function index()
+    {
+        return Organisation::all();
+    }
+
+     /**
+     * @SWG\Get(
+     *   path="/api/organisations/{id}",
+     *   summary="Show organisation info ",
+     *   operationId="show",
+     *   @SWG\Response(response=200, description="successful operation"),
+     *   @SWG\Response(response=406, description="not acceptable"),
+     *   @SWG\Response(response=500, description="internal server error")
+     * )
+     *
+     */
+
+    public function show($id)
+    {
+        return Organisation::find($id);
+    }
+
+    /**
+     * @SWG\Post(
+     *   path="/api/organisations",
+     *   summary="Create organisation",
+     *   operationId="store",
+     *   @SWG\Parameter(
+     *     name="name",
+     *     in="query",
+     *     description="Organisation name.",
+     *     required=true,
+     *     type="string"
+     *   ),
+     *   @SWG\Parameter(
+     *     name="website",
+     *     in="query",
+     *     description="Organisation website.",
+     *     required=true,
+     *     type="string"
+     *   ),
+     *  @SWG\Parameter(
+     *     name="contact_person",
+     *     in="query",
+     *     description="Organisation Contact Person.",
+     *     required=true,
+     *     type="string"
+     *   ),
+     *   @SWG\Parameter(
+     *     name="email",
+     *     in="query",
+     *     description="Organisation email.",
+     *     required=true,
+     *     type="string"
+     *   ),
+     *   @SWG\Parameter(
+     *     name="phone",
+     *     in="query",
+     *     description="Organisation phone.",
+     *     required=true,
+     *     type="string"
+     *   ),
+     *  @SWG\Parameter(
+     *     name="county",
+     *     in="query",
+     *     description="Organisation county.",
+     *     required=true,
+     *     type="string"
+     *   ),
+     *  @SWG\Parameter(
+     *     name="locality",
+     *     in="query",
+     *     description="Organisation locality.",
+     *     required=true,
+     *     type="string"
+     *   ),
+     *  @SWG\Parameter(
+     *     name="address",
+     *     in="query",
+     *     description="Organisation address.",
+     *     required=false,
+     *     type="string"
+     *   ),
+     *   @SWG\Parameter(
+     *     name="comments",
+     *     in="query",
+     *     description="Organisation comments.",
+     *     required=false,
+     *     type="string"
+     *   ),
+     *   @SWG\Response(response=200, description="successful operation"),
+     *   @SWG\Response(response=406, description="not acceptable"),
+     *   @SWG\Response(response=500, description="internal server error")
+     * )
+     *
+     */
+    public function store(Request $request)
+    {
+        $validator = Validator::make($request->all(), [
+            'name' => 'required|string|max:255',
+            'website' => 'required|max:255',
+            'contact_person' => 'required|string|max:255',
+            'email' => 'required|string|email|max:255|unique:users',
+            'phone' => 'required|string|min:6|',
+            'county' => 'required|string|min:4|',
+            'locality' => 'required|string|min:4|'
+        ]);
+
+        if ($validator->fails()) {
+            return response(['errors'=>$validator->errors()->all()], 400);
+        }
+        
+        $organisation = Organisation::create($request->all());
+        return response()->json($organisation, 201); 
+    }
+
+    /**
+     * @SWG\put(
+     *   path="/api/organisations/{id}",
+     *   summary="Update organisation",
+     *   operationId="update",
+     *   @SWG\Response(response=200, description="successful operation"),
+     *   @SWG\Response(response=406, description="not acceptable"),
+     *   @SWG\Response(response=500, description="internal server error")
+     * )
+     *
+     */
+
+    public function update(Request $request, $id)
+    {
+        $organisation = Organisation::findOrFail($id);
+        $organisation->update($request->all());
+
+        return $organisation;
+    }
+
+    /**
+     * @SWG\Delete(
+     *   path="/api/organisations/{id}",
+     *   summary="Delete organisation",
+     *   operationId="delete",
+     *   @SWG\Response(response=200, description="successful operation"),
+     *   @SWG\Response(response=406, description="not acceptable"),
+     *   @SWG\Response(response=500, description="internal server error")
+     * )
+     *
+     */
+
+    public function delete(Request $request, $id)
+    {
+        $organisation = Organisation::findOrFail($id);
+        $organisation->delete();
+
+        $response = array("message" => 'Organisation deleted.');
+
+        return response()->json($response, 200);
+    }
+}
